--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "why express ? = Express.js is a minimal & flexible web application framework for Node.js based on http modules.\r Alternatives = Fastify, nest.js , koa, Hono , Elysia.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --env-file=.env --watch app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "dotenv": "^17.2.0",
     "express": "^5.1.0"
   }
 }
